Fix alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -1431,6 +1431,29 @@ ol {
 }
 
 /*---------------------
+  Training Section
+-----------------------*/
+
+.training-text {
+	background: #151515;
+	padding: 50px 70px 100px;
+}
+
+.training-text .training-desc {
+	color: #a9a9a9;
+	font-size: 20px;
+}
+
+.training-text .training-desc h2 {
+	font-size: 36px;
+	color: #fae102;
+	text-shadow: 1px 1px 2px black;
+	font-weight: 700;
+	text-transform: uppercase;
+	margin: 20px 0px;
+}
+
+/*---------------------
   Testimonial Section
 -----------------------*/
 
